2006-02-07  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/DefaultEditorToolkit.java: Changed behavior
	of actions "delete-next" and "delete-previous", added new TextAction
	implementations for "selection-begin", "selection-begin-line",
	"selection-end" and "selection-end-line".

2006-02-07  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTextUI.java
	(paint): Acquire read lock on the document before calling
	paintSafely.
	(paintSafely): Added comment about what this method does.
	(paintBackground): Implemented to actually paint the background.
	(update): Overridden to _not_ paint the background. This is done
	in paintBackground in this UI.

2006-02-07  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/View.java
	(forwardUpdate): Don't notify newly added child views as specified.

2006-02-07  Robert Schuster  <robertschuster@fsfe.org>

	* gnu/java/beans/decoder/DefaultExceptionListener.java: Removed.

2006-02-07  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/DefaultStyledDocument.java
	(ElementBuffer.insert): Only register change when the element
	actually changed.

2006-02-07  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/java/security/key/KeyPairCodecFactory.java (getEncodingName): New
	method.
	(getEncodingShortName): Likewise.
	* gnu/java/security/key/IKeyPairCodec.java (X509_FORMAT): New constant.
	(PKCS8_FORMAT): Likewise.
	(ASN1_FORMAT): Likewise.
	* gnu/java/security/key/dss/DSSPublicKey.java (DSSPublicKey(4)): Call
	constructor with 5 arguments.
	(DSSPublicKey(5)): New constructor.
	(valueOf): Handle ASN.1 encoding.
	(getEncoded): Likewise.
	* gnu/java/security/key/dss/DSSPrivateKey.java (DSSPrivateKey(4)): Call
	constructor with 5 arguments.
	(DSSPrivateKey(5)): New constructor.
	(valueOf): Handle ASN.1 encoding.
	(getEncoded): Likewise.
	* gnu/java/security/key/dss/DSSKeyPairX509Codec.java: New file.
	* gnu/java/security/key/dss/DSSKeyPairPKCS8Codec.java: Likewise.